--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <a
                     href="https://wa.me/919748273822"
                     target="_blank"
-                    class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700"
+                    class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-green-700"
                 >
-                    Connect with Me
+                    Let’s be friends!
                 </a>
             </div>
         </div>
