--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     target="_blank"
                     class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-green-700"
                 >
-                    Let’s be friends!
+                    Connect with me
                 </a>
             </div>
         </div>
