--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <h1 class="text-2xl font-bold text-blue-600 mb-2">Raqib Ahmed</h1>
             <p class="text-gray-700 text-lg">
                 Hey there! I’m Raqib Ahmed, aur mujhe lagta hai har connection
-                ek smile se start hota hai. So here’s mine 😊. Waise, main bhi
-                George College ka student hoon! –Let’s be friends!
+                ek smile se start hota hai. So here’s mine 😊. Let’s be friends!
             </p>
             <div class="mt-4">
                 <a
