--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a
                     href="https://wa.me/919748273822"
                     target="_blank"
-                    class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-green-700"
+                    class="bg-blue-600 text-white px-4 py-2 rounded"
                 >
                     Connect with me
                 </a>
